시큐리티 및 jwt 설정 수정