@@ -1,19 +1,18 @@
-package com.bookreum.dev.domain.club.jwt;
+package com.bookreum.dev.domain.security;
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import java.util.Collections;
+
 import java.io.IOException;
-import java.util.List;
 
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -30,12 +29,11 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         if (StringUtils.hasText(bearer) && bearer.startsWith("Bearer ")) {
             String token = bearer.substring(7);
             if (tokenProvider.validateToken(token)) {
-                String userId = tokenProvider.getUserIdFromToken(token);
-                // 권한은 필요에 맞게 변경
+                String kakaoId = tokenProvider.getKakaoIdFromToken(token);
                 var auth = new UsernamePasswordAuthenticationToken(
-                    userId, 
-                    null, 
-                    List.of(new SimpleGrantedAuthority("ROLE_USER"))
+                    kakaoId,
+                    null,
+                    Collections.emptyList()
                 );
                 SecurityContextHolder.getContext().setAuthentication(auth);
             }
